@@ -1,3 +1,9 @@
+2008-10-16  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* src/scripts/ : move *.sh, *.mkf and *.mk files from src/ to src/scripts/
+
+	* src/*/{Lib|Source}/Makefile: change to non-GNU-make style
+
 2008-10-15  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* src/Makevars, src/Makevars.win: replacing
